[FEATURE] Adicionado módulo de usuário, habilitando autenticação com jwt para todos endpoints, com exceção de login e criação de usuário
